--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Termometers</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
+<body id="body">
 
     <div class="main-container">
         <div class="temp-container">
@@ -75,6 +75,7 @@
         </form>
     </div>
     
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/style_script.js"></script>
 </body>
 </html>
