--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Termometers</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
 
@@ -75,7 +75,7 @@
         </form>
     </div>
     
-    <script src="js/script.js"></script>
-    <script src="js/style_script.js"></script>
+    <script src="script.js"></script>
+    <script src="style_script.js"></script>
 </body>
 </html>
