--- a/index.html
+++ b/index.html
@@ -44,18 +44,32 @@
         </div>    
 
         <div class="local" id="local">
-            <div class="local__img">
-                <img src="" alt="">
+            <div class="local__main">
+                <div class="local__main__img">
+                    <img src="images/day-sunny-icon.svg" alt="">
+                </div>
+                <hr>
+                <div class="local__main__temp">
+                    <span id="local">23°</span>
+                </div>
             </div>
             <div class="local__location">
-                <span id="location"></span>
+                <span id="location">São Paulo, SP</span>
             </div>
-            <div class="local__temp">
+            <div class="local__temp-range">
                 <div class="local-min">
-                    <span id="local-min"></span>
+                    <h2>Min</h2>
+                    <hr>
+                    <div class="temp-range">
+                        <span id="local-min">19°</span>
+                    </div>
                 </div>
                 <div class="local-max">
-                    <span id="local-max"></span>
+                    <h2>Max</h2>
+                    <hr>
+                    <div class="temp-range">
+                        <span id="local-max">27°</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,6 +90,5 @@
     </div>
     
     <script src="script.js"></script>
-    <script src="style_script.js"></script>
 </body>
 </html>
