--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <div class="local" id="local">
             <div class="local__main">
                 <div class="local__main__img">
-                    <img src="images/day-sunny-icon.svg" alt="">
+                    <img src="images/sunny-day.svg" alt="">
                 </div>
                 <hr>
                 <div class="local__main__temp">
-                    <span id="local">23°</span>
+                    <span id="local-temp">23°</span>
                 </div>
             </div>
             <div class="local__location">
