--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
                 </div>
                 <hr>
                 <div class="local__main__temp">
-                    <span id="local-temp">23°</span>
+                    <span id="local-temp"></span>
                 </div>
             </div>
             <div class="local__location">
-                <span id="location">São Paulo, SP</span>
+                <span id="location"></span>
             </div>
             <div class="local__temp-range">
                 <div class="local-min">
                     <h2>Min</h2>
                     <hr>
                     <div class="temp-range">
-                        <span id="local-min">19°</span>
+                        <span id="local-min"></span>
                     </div>
                 </div>
                 <div class="local-max">
                     <h2>Max</h2>
                     <hr>
                     <div class="temp-range">
-                        <span id="local-max">27°</span>
+                        <span id="local-max"></span>
                     </div>
                 </div>
             </div>
@@ -89,6 +89,7 @@
         </form>
     </div>
     
-    <script src="script.js"></script>
+    <script src="javascript/temp_conversion.js"></script>
+    <script src="javascript/local.js"></script>
 </body>
 </html>
