--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Termometers</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/temp_output.css">
+    <link rel="stylesheet" href="css/termometer.css">
+    <link rel="stylesheet" href="css/actions.css">
+    <link rel="stylesheet" href="css/local.css">
 </head>
 <body id="body">
 
