--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="local" id="local">
             <div class="local__main">
                 <div class="local__main__img">
-                    <img src="images/sunny-day.svg" alt="">
+                    <img src="gif/spinner.gif" alt="" id="weather-image">
                 </div>
                 <hr>
                 <div class="local__main__temp">
@@ -61,6 +61,7 @@
                 </div>
             </div>
             <div class="local__location">
+                <img src="gif/3-dots.gif" alt="" id="loading-location">
                 <span id="location"></span>
             </div>
             <div class="local__temp-range">
