--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/termometer.css">
     <link rel="stylesheet" href="css/actions.css">
     <link rel="stylesheet" href="css/local.css">
+
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body id="body">
 
