Update Responsividade Local

--- a/index.html
+++ b/index.html
@@ -61,26 +61,27 @@
                 </div>
                 <hr>
                 <div class="local__main__temp">
-                    <span id="local-temp"></span>
+                    <span id="local-temp">27°</span>
                 </div>
             </div>
             <div class="local__location">
-                <img src="gif/3-dots.gif" alt="" id="loading-location">
-                <span id="location"></span>
+                <!-- <img src="gif/3-dots.gif" alt="" id="loading-location"> -->
+                <img src="" alt="" id="loading-location">
+                <span id="location">Sao Paulo, BR</span>
             </div>
             <div class="local__temp-range">
                 <div class="local-min">
                     <h2>Min</h2>
                     <hr>
                     <div class="temp-range">
-                        <span id="local-min"></span>
+                        <span id="local-min">18°</span>
                     </div>
                 </div>
                 <div class="local-max">
                     <h2>Max</h2>
                     <hr>
                     <div class="temp-range">
-                        <span id="local-max"></span>
+                        <span id="local-max">30°</span>
                     </div>
                 </div>
             </div>
